2006-02-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: added shortcut to menuitem
	  'Resize/Move'(#329627)

2006-02-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/GParted_Core.h,
	  include/Partition.h,
	  src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc,
	  src/TreeView_Detail.cc: store flags in a list instead of a string.
	* Makefile.am,
	  src/Makefile.am: cleanups
	  
2006-02-17 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h: added FIXME
	* include/Win_GParted.h,
	  src/Win_GParted.cc: cleanups (mostly messagebox related)
	* src/GParted_Core.cc: added some more progressfeedback to create and
	  resize

2006-02-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.2.1
	  ======================================================

2006-02-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: sync after swapon/swapoff (see also #330327)
	
2006-02-16 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: improved check for libparted (thanks to Pete Shinners,
	  see also #330776) 
	
2006-02-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  include/Partition.h,
	  src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc,
	  src/TreeView_Detail.cc,
	  src/Win_GParted.cc: support partitions with multiple mountpoints
	  (see also #330327)

2006-02-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/ntfs.cc: changed a few things after talking with Szaka
	  (ntfsprogs developer)

2006-02-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* wrap mount/umount/swapon/swapoff instead of implementing it
	  ourselves (#330641)
	* moved execute_command() to Utils and made the filesystems use it. All
	  in all this decreased the size of the binary with 10% and made stuff
	  more readable.

2006-02-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* removed legend after discussion with usability guys

2006-02-10 Bart Hakvoort <hakvoort@cvs.gnome.org>
