@@ -1,5 +1,10 @@
 2006-02-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: added some checks before performing a
+	  move/resize using libparted.
+
+2006-02-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/Win_GParted.cc: added shortcut to menuitem
 	  'Resize/Move'(#329627)
 
